; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vc4/extr_vc4_kms.c_vc4_get_ctm_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vc4/extr_vc4_kms.c_vc4_get_ctm_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vc4_ctm_state = type { i32 }
%struct.drm_atomic_state = type { i32, %struct.drm_device* }
%struct.drm_device = type { %struct.vc4_dev* }
%struct.vc4_dev = type { i32 }
%struct.drm_private_obj = type { i32 }
%struct.drm_private_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.vc4_ctm_state* (%struct.drm_atomic_state*, %struct.drm_private_obj*)* @vc4_get_ctm_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.vc4_ctm_state* @vc4_get_ctm_state(%struct.drm_atomic_state* %0, %struct.drm_private_obj* %1) #0 {
  %3 = alloca %struct.vc4_ctm_state*, align 8
  %4 = alloca %struct.drm_atomic_state*, align 8
  %5 = alloca %struct.drm_private_obj*, align 8
  %6 = alloca %struct.drm_device*, align 8
  %7 = alloca %struct.vc4_dev*, align 8
  %8 = alloca %struct.drm_private_state*, align 8
  %9 = alloca i32, align 4
  store %struct.drm_atomic_state* %0, %struct.drm_atomic_state** %4, align 8
  store %struct.drm_private_obj* %1, %struct.drm_private_obj** %5, align 8
  %10 = load %struct.drm_atomic_state*, %struct.drm_atomic_state** %4, align 8
  %11 = getelementptr inbounds %struct.drm_atomic_state, %struct.drm_atomic_state* %10, i32 0, i32 1
  %12 = load %struct.drm_device*, %struct.drm_device** %11, align 8
  store %struct.drm_device* %12, %struct.drm_device** %6, align 8
  %13 = load %struct.drm_device*, %struct.drm_device** %6, align 8
  %14 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %13, i32 0, i32 0
  %15 = load %struct.vc4_dev*, %struct.vc4_dev** %14, align 8
  store %struct.vc4_dev* %15, %struct.vc4_dev** %7, align 8
  %16 = load %struct.vc4_dev*, %struct.vc4_dev** %7, align 8
  %17 = getelementptr inbounds %struct.vc4_dev, %struct.vc4_dev* %16, i32 0, i32 0
  %18 = load %struct.drm_atomic_state*, %struct.drm_atomic_state** %4, align 8
  %19 = getelementptr inbounds %struct.drm_atomic_state, %struct.drm_atomic_state* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @drm_modeset_lock(i32* %17, i32 %20)
  store i32 %21, i32* %9, align 4
  %22 = load i32, i32* %9, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %2
  %25 = load i32, i32* %9, align 4
  %26 = call %struct.vc4_ctm_state* @ERR_PTR(i32 %25)
  store %struct.vc4_ctm_state* %26, %struct.vc4_ctm_state** %3, align 8
  br label %40

27:                                               ; preds = %2
  %28 = load %struct.drm_atomic_state*, %struct.drm_atomic_state** %4, align 8
  %29 = load %struct.drm_private_obj*, %struct.drm_private_obj** %5, align 8
  %30 = call %struct.drm_private_state* @drm_atomic_get_private_obj_state(%struct.drm_atomic_state* %28, %struct.drm_private_obj* %29)
  store %struct.drm_private_state* %30, %struct.drm_private_state** %8, align 8
  %31 = load %struct.drm_private_state*, %struct.drm_private_state** %8, align 8
  %32 = call i64 @IS_ERR(%struct.drm_private_state* %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %27
  %35 = load %struct.drm_private_state*, %struct.drm_private_state** %8, align 8
  %36 = call %struct.vc4_ctm_state* @ERR_CAST(%struct.drm_private_state* %35)
  store %struct.vc4_ctm_state* %36, %struct.vc4_ctm_state** %3, align 8
  br label %40

37:                                               ; preds = %27
  %38 = load %struct.drm_private_state*, %struct.drm_private_state** %8, align 8
  %39 = call %struct.vc4_ctm_state* @to_vc4_ctm_state(%struct.drm_private_state* %38)
  store %struct.vc4_ctm_state* %39, %struct.vc4_ctm_state** %3, align 8
  br label %40

40:                                               ; preds = %37, %34, %24
  %41 = load %struct.vc4_ctm_state*, %struct.vc4_ctm_state** %3, align 8
  ret %struct.vc4_ctm_state* %41
}

declare dso_local i32 @drm_modeset_lock(i32*, i32) #1

declare dso_local %struct.vc4_ctm_state* @ERR_PTR(i32) #1

declare dso_local %struct.drm_private_state* @drm_atomic_get_private_obj_state(%struct.drm_atomic_state*, %struct.drm_private_obj*) #1

declare dso_local i64 @IS_ERR(%struct.drm_private_state*) #1

declare dso_local %struct.vc4_ctm_state* @ERR_CAST(%struct.drm_private_state*) #1

declare dso_local %struct.vc4_ctm_state* @to_vc4_ctm_state(%struct.drm_private_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
